@startuml
' Bounded Context: analytics
' Compact view: aggregates, services, repositories, controllers.
' Individual commands/queries/resources/assemblers are omitted for readability.

left to right direction
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 50
skinparam shadowing false
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor White
  ArrowColor #444444
  BorderColor #333333
}

package "domain.model.aggregates" {
  class Metric {
    +MetricId id
    +NursingHomeId nursingHomeId
    +MetricType type
    +MetricCategory category
    +Number value
    +Instant recordedAt
  }
}

package "domain.services" {
  interface MetricCommandService
  interface MetricQueryService
}

package "application (command/query services)" {
  class MetricCommandServiceImpl
  class MetricQueryServiceImpl
}

package "application.eventhandlers" {
  class AdmittedResidentEventHandler
  class HiredEmployeeEventHandler
  class RetiredResidentEventHandler
  class SuspendedEmployeeEventHandler
  class TerminationEmployeeEventHandler
}

package "infrastructure.persistence.jpa.repositories" {
  interface MetricRepository
}

package "interfaces.rest" {
  class NursingHomeAnalyticsController
}

MetricRepository --> Metric

MetricCommandService <|.. MetricCommandServiceImpl
MetricQueryService <|.. MetricQueryServiceImpl

MetricCommandServiceImpl --> MetricRepository
MetricQueryServiceImpl --> MetricRepository

NursingHomeAnalyticsController --> MetricQueryService
NursingHomeAnalyticsController --> MetricCommandService

' Event handlers use command service to record derived metrics
' from other bounded contexts (nursing, hcm) via domain events
AdmittedResidentEventHandler --> MetricCommandServiceImpl : uses
HiredEmployeeEventHandler --> MetricCommandServiceImpl : uses
RetiredResidentEventHandler --> MetricCommandServiceImpl : uses
SuspendedEmployeeEventHandler --> MetricCommandServiceImpl : uses
TerminationEmployeeEventHandler --> MetricCommandServiceImpl : uses

@enduml